BS-5 add basic layout

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,12 @@
   --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+html,
+body,
+#app {
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
